  under ocamldebug calls Pervasives.flush_all
  (Xavier Leroy, report by Paul Steckler, review by Gabriel Scherer)

- MPR#7638: in the Windows Mingw64 port, multithreaded programs compiled
  to bytecode could crash when raising an exception from C code.
  This looks like a Mingw64 issue, which we work around with GCC builtins.
  (Xavier Leroy)

- GPR#1155: Fix a race condition with WAIT_NOHANG on Windows
  (Jérémie Dimino and David Allsopp)

- GPR#1199: Pretty-printing formatting cleanup in pprintast
  (Ethan Aubin, suggestion by Gabriel Scherer, review by David Allsopp,
  Florian Angeletti, and Gabriel Scherer)

- GPR#1223: Fix corruption of the environment when using -short-paths
  with the toplevel.
  (Leo White, review by Alain Frisch)

- GPR#1329: Prevent recursive polymorphic variant names
  (Jacques Garrigue, fix suggested by Leo White)

- Fix pprintast for #... infix operators
  (Alain Frisch, report by Omar Chebib)

- GPR#1308: Only treat pure patterns as inactive
  (Leo White, review by Alain Frisch and Gabriel Scherer)

- MPR#7612, GPR#1345: afl-instrumentation bugfix for classes.
  (Stephen Dolan, review by Gabriel Scherer and David Allsopp)

- MPR#7619, GPR#1387: position of the optional last semi-column not included
  in the position of the expression (same behavior as for lists)
  (Christophe Raffalli, review by Gabriel Scherer)

- GPR#1390: fix the [@@unboxed] type check to accept parametrized types
  (Leo White, review by Damien Doligez)

OCaml 4.05.0 (13 Jul 2017):
---------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Code generation and optimizations:

- MPR#7201, GPR#954: Correct wrong optimisation of "0 / <expr>"
  and "0 mod <expr>" in the case when <expr> was a non-constant
  evaluating to zero
  (Mark Shinwell, review by Gabriel Scherer, Leo White and Xavier Leroy)

- MPR#7357, GPR#832: Improve compilation time for toplevel
  include(struct ... end : sig ... end)